--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "5.1",
     "react-scripts": "5.0.0",
+    "sass": "^1.49.5",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
